
2007-10-24  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: dbus-server-object.c, xvidcap-dbus.xml,
		dbus-server-object.h, xvidcap-dbus-client.c:
		added start, stop, pause remote functions
		to dbus server.

2007-10-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* net.jarre_de_the.Xvidcap.service.in, Makefile.am,
		src: dbus-server-object.c, 
		dbus-server-object.h, Makefile.am, 
		xvidcap-infos.xml: prototype for
		dbus support
	* Makefile.am, src: dbus-server-object.c, 
		xvidcap-dbus.xml, dbus-server-object.h, 
		xvidcap-dbus-client.c, app_data.c, 
		app_data.h, Makefile.am, xvidcap-infos.xml:
		dbus prototype works, now
	* src/capture.c: Solaris does not have extutil.h

2007-10-22  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/app_data.c: reimplemented passing of
		environment variables to spawned 
		processes (e. g. animate/play) to
		make it work independant of the shell
	* src: colors.h, app_data.c, xtoxwd.c, 
		gnome_options.c: some fixes for 
		compiling with DEBUG=1
	* src: gnome_ui.c, gnome_ui.h: code cleanup

2007-09-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_frame.c: fixed bug where resizing
		the capture frame on one side would
		change the other end, too.

2007-08-25  lon  <lon83129@126.com>
	* po/zh_CN.po: updated l10n

2007-08-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_ui.c: fix for bug 1757339 (gtk+ 
		2.4 compat issue)

2007-06-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ffmpeg: ffmpeg version bump to current
		version (preliminary tests look good,
		needs more testing). Also fixed svn
		externals to always pull well-defined
		version of libswscale.

2007-06-30  Samuli Suominen  <drac@gentoo.org>
	* src/xtoffmpeg.c: remove include of dsputil.h

2007-06-30  lon  <lon83129@126.com>
	* po/zh_CN.po: updated Chinese l10n

2007-06-30  Treviño  <trevi55@gmail.com>
	* debian: control, rules: enable libtheora and
		require imagemagick

2007-05-30  Karl H. Beckers  <karl.h.beckers@gmx.net>